--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-simple-typewriter": "^3.0.1",
     "uniqid": "^5.4.0",
     "web-vitals": "^2.1.4"
   },
