--- a/package.json
+++ b/package.json
@@ -44,5 +44,5 @@
   "devDependencies": {
     "gh-pages": "^3.2.3"
   },
-  "homepage": "http://ishuamali.github.io/react-gh-pages"
+  "homepage": "https://traneric89.github.io/one-stop-shop"
 }
